<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/relativeLayout">

        <ImageButton
            android:id="@+id/imageBackRegisterToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@null"
            app:srcCompat="@mipmap/ic_back_white" />

        <TextView
            android:id="@+id/textRegisteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:fontFamily="Roboto"
            android:padding="10dp"
            android:text="Registro"
            android:textColor="@drawable/mainbuttontext"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingEnd="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingStart="30dp"
        android:paddingTop="30dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:fontFamily="Roboto"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:fontFamily="Roboto"
            android:hint="Nombre de usuario"
            android:inputType="textPersonName"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:fontFamily="Roboto"
            android:hint="Correo electronico"
            android:inputType="textEmailAddress"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro" />

        <EditText
            android:id="@+id/editContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:fontFamily="Roboto"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro" />

        <EditText
            android:id="@+id/editContraseñaConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:fontFamily="Roboto"
            android:hint="Confirmar Contraseña"
            android:inputType="textPassword"
            android:textColor="@drawable/mainbuttontext"
            android:textColorHint="@drawable/mainbuttontext"
            android:theme="@style/campotextoregistro" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="Roboto"
                android:hint="Fecha de nacimiento"
                android:inputType="date"
                android:textColor="@drawable/mainbuttontext"
                android:textColorHint="@drawable/mainbuttontext"
                android:theme="@style/campotextoregistro" />

            <ImageButton
                android:id="@+id/datePickerButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                app:srcCompat="@mipmap/ic_date_range_white_24dp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttonregisterloginshape"
        android:fontFamily="Roboto"
        android:text="Registrar"
        android:textColor="@drawable/mainbuttontext" />
</RelativeLayout>
