...
            android:layout_alignParentBottom="true"
            android:textColor="@drawable/mainbuttontext"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/relativeLayout2"
        android:layout_alignBottom="@+id/relativeLayout2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
...
